Fixing spacing on layout

--- a/src/Components/JobCard/JobCard.module.sass
+++ b/src/Components/JobCard/JobCard.module.sass
@@ -67,6 +67,7 @@
     padding: 0.3rem
     border-radius: 5px
     cursor: pointer
+    margin-left: 0.2rem
 
 .featured
     color: base.$Light-Grayish-Cyan
@@ -74,6 +75,7 @@
     padding: 0.3rem
     border-radius: 5px
     cursor: pointer
+    margin-left: 0.2rem
 
 .jobPosition
     font-weight: 700
